--- a/automations/relays/fan_controls.yaml
+++ b/automations/relays/fan_controls.yaml
@@ -35,10 +35,11 @@ trigger:
 
 condition:
   and:
-    - condition: state
-      alias: "People home"
-      entity_id: binary_sensor.people_home
-      state: "on"
+    - not:
+        condition: state
+        alias: "People home"
+        entity_id: zone.home
+        state: "0"
     - or:
         - and:
             - condition: trigger
