--- a/automations/sensors/filter_door.yaml
+++ b/automations/sensors/filter_door.yaml
@@ -18,3 +18,7 @@ action:
 
   - service: counter.decrement
     entity_id: counter.small_air_filters
+
+  - service: alert.turn_off
+    target:
+      entity_id: alert.air_filter
