--- a/automations/utilities/dishwasher_end.yaml
+++ b/automations/utilities/dishwasher_end.yaml
@@ -9,7 +9,7 @@ trigger:
   platform: numeric_state
   entity_id: sensor.dishwasher_7_1min
   below: 2
-  for: '00:05:00'
+  for: "00:05:00"
 
 condition:
   condition: state
@@ -22,6 +22,9 @@ action:
 
   - service: notify.family_ai
     data:
-      message: dishwasher is done
       title: Dishwasher done!
-      tag: dishwasher_done
+      message: false
+      data:
+        prompt: dishwasher is done
+        backup: The dishwasher is complete!
+        tag: dishwasher_done
