--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -167,6 +167,13 @@ cards:
         "living dining office kitchen bedroom bath"
         "guest spare garage attic shed ."
       mediaquery:
+        "(max-width: 1400px)":
+          grid-template-columns: repeat(4, 1fr)
+          grid-template-areas: |
+            "label label label label"
+            "living dining office kitchen "
+            "bedroom bath guest spare"
+            "garage attic shed ."
         "(max-width: 600px)":
           grid-template-columns: 1fr 1fr
           grid-template-areas: |
