--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -9,7 +9,7 @@ layout:
     "welcome status"
     "rooms rooms"
   mediaquery:
-    "(max-width: 600px)":
+    "(max-width: 768px)":
       grid-template-areas: |
         "welcome"
         "people"
@@ -169,15 +169,15 @@ cards:
         "guest spare garage attic shed ."
       mediaquery:
         # portrait monitor
-        "(orientation: portrait)":
+        "only screen and (min-width: 769px) and (max-width: 1400px)":
           grid-template-columns: repeat(4, 1fr)
           grid-template-areas: |
             "label label label label"
             "living dining office kitchen "
             "bedroom bath guest spare"
             "garage attic shed ."
-        # iphone 14 pro max
-        "(max-width: 430px)":
+        # Smartphones
+        "only screen and (max-width: 768px)":
           grid-template-columns: 1fr 1fr
           grid-template-areas: |
             "label label"
