--- a/ui_lovelace_minimalist/dashboard/views/mainviews/network.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/network.yaml
@@ -85,6 +85,7 @@ cards:
         - entity_id: "*seedbox*"
         - entity_id: "*mfc_7860*"
         - entity_id: "*poat_pi*"
+        - entity_id: "remote.fire_tv*"
         - entity_id: "media_player.xbox*"
         - entity_id: select.cat_noms_manual_feed
         - entity_id: sensor.cat_noms_battery_status
